# claude-tg

./: README.md  pyproject.toml
claude_tg/: __main__.py  config.py  hook_script.py  hook_server.py  probe.py  session.py  session_state.py  stream_parser.py  telegram_client.py
docs/superpowers/plans/: 2026-04-30-claude-tg.md
docs/superpowers/specs/: 2026-04-30-claude-tg-remote-control-design.md  2026-04-30-probe-findings.md
scripts/: discover_ids.sh  probe.sh  smoke.sh
tests/: fake_telegram.py  test_config.py  test_hook_server.py  test_integration.py  test_session_state.py  test_stream_parser.py  test_telegram_client.py
