[project]
name = "claude-tg"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aiohttp>=3.9",
]

[project.scripts]
claude-tg = "claude_tg.__main__:main"
claude-tg-hook = "claude_tg.hook_script:main"
claude-tg-probe = "claude_tg.probe:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
